--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
     <div class="container-fluid ms-4">
       <a class="navbar-brand mx-2" href="#">
-          <div class="logonavbar hov10t03">
+          <div class="logonavbar scale-hover-md">
               <img src="img/logo seul.png" alt="Logo OGCAO" class="logonavbar">
           </div>
       </a>
