--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,7 @@
     
 
   <!-- Barre de navigation -->
+  <header>
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
     <div class="container-fluid ms-4">
       <a class="navbar-brand mx-2" href="#">
@@ -78,10 +79,10 @@
       </div>
     </div>
   </nav>
+  </header>
 
   <!-- Jumbotron -->
-  <div >
-      <section id="accueil" class="bg-image-fixed align-self-stretch">
+  <section id="accueil" class="bg-image-fixed align-self-stretch">
           <div class="container-fluid h-100 align-self-stretch">
             <div class="d-flex flex-column align-items-center justify-content-center p-5">
 
@@ -109,12 +110,10 @@
 
             </div>
           </div>
-        </section>
-  </div>
+  </section>
 
 
-  <div id="testimonials" class="carousel slide" data-ride="carousel">
-    <section>
+  <section id="testimonials" class="carousel slide" data-ride="carousel">
       <div class="customer-feedback">
         <div class="container text-center">
           <div class="row">
@@ -199,30 +198,32 @@
         </div><!-- /End container -->
       </div><!-- /End customer-feedback -->
     </section>
-  </div>
 
 
 
     <!-- Call to action -->
-  <div class="call-to-action">
+  <section class="call-to-action">
       <h2>Appel à l'action</h2>
       <p>Un texte incitatif pour encourager les visiteurs à effectuer une action</p>
       <button type="button" class="btn btn-lg btn-warning">Cliquez ici</button>
-  </div>
+  </section>
 
     <!-- Section 1 -->
-  <div id="section1" class="section">
+  <section id="section1" class="section">
       <h2>Section 1</h2>
       <p>Un peu de texte pour présenter cette section</p>
       <button type="button" class="btn btn-lg btn-primary">Un bouton</button>
-  </div>
+  </section>
 
     <!-- Section 2 -->
-  <div id="realisations" class="section">
+  <section id="realisations" class="section">
       <h2>Section 2</h2>
       <p>Encore un peu de texte pour présenter cette section</p>
       <button type="button" class="btn btn-lg btn-success">Un autre bouton</button>
-  </div>
+  </section>
+  <footer class="mt-5 text-center">
+    <p>&copy; 2023 OGCAO</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
   </body>
