--- a/Index.html
+++ b/Index.html
@@ -120,7 +120,7 @@
           <div class="row">
             <div class="offset-2 col-sm-8">
               <div>
-                <h2 class="section-title">Nos recomendations</h2>
+                <h2 class="section-title">Nos recommandations</h2>
               </div>
             </div><!-- /End col -->
           </div><!-- /End row -->
